--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,12 @@
 ---
 abstract: 'Convert Excel file to CSV using Win32::OLE'
 author:
-  - 'Klaus Eichner <klaus03@gmail.com>'
+  - unknown
 build_requires: {}
 configure_requires:
   Module::Build: 0
 dynamic_config: 1
-generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110930'
+generated_by: 'Module::Build version 0.3901, CPAN::Meta::Converter version 2.120630'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -15,9 +15,10 @@ name: Win32-Scsv
 provides:
   Win32::Scsv:
     file: lib/Win32/Scsv.pm
-    version: 0.01
+    version: 0.02
 requires:
   Win32::OLE: 0
+  Win32::OLE::Const: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.01
+version: 0.02
