--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,12 @@
 ---
 abstract: 'Convert from and to *.xls, *.csv using Win32::OLE'
 author:
-  - unknown
+  - 'Klaus Eichner <klaus03@gmail.com>'
 build_requires: {}
 configure_requires:
   Module::Build: 0
 dynamic_config: 1
-generated_by: 'Module::Build version 0.3901, CPAN::Meta::Converter version 2.120630'
+generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -15,10 +15,10 @@ name: Win32-Scsv
 provides:
   Win32::Scsv:
     file: lib/Win32/Scsv.pm
-    version: 0.06
+    version: 0.07
 requires:
   Win32::OLE: 0
   Win32::OLE::Variant: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.06
+version: 0.07
