--- a/META.yml
+++ b/META.yml
@@ -4,21 +4,21 @@ author:
   - 'Klaus Eichner <klaus03@gmail.com>'
 build_requires: {}
 configure_requires:
-  Module::Build: 0
+  Module::Build: '0'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4005, CPAN::Meta::Converter version 2.130880'
+generated_by: 'Module::Build version 0.4205, CPAN::Meta::Converter version 2.141170'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Win32-Scsv
 provides:
   Win32::Scsv:
     file: lib/Win32/Scsv.pm
-    version: 0.12
+    version: '0.13'
 requires:
-  Win32::OLE: 0
-  Win32::OLE::Variant: 0
+  Win32::OLE: '0'
+  Win32::OLE::Variant: '0'
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.12
+version: '0.13'
