--- a/META.yml
+++ b/META.yml
@@ -2,23 +2,24 @@
 abstract: 'Convert from and to *.xls, *.csv using Win32::OLE'
 author:
   - 'Klaus Eichner <klaus03@gmail.com>'
-build_requires: {}
+build_requires:
+  ExtUtils::MakeMaker: '0'
 configure_requires:
-  Module::Build: '0'
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4205, CPAN::Meta::Converter version 2.141170'
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.141170'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: '1.4'
 name: Win32-Scsv
-provides:
-  Win32::Scsv:
-    file: lib/Win32/Scsv.pm
-    version: '0.14'
+no_index:
+  directory:
+    - t
+    - inc
 requires:
   Win32::OLE: '0'
   Win32::OLE::Variant: '0'
 resources:
-  license: http://dev.perl.org/licenses/
-version: '0.14'
+  repository: https://github.com/klaus03/Win32-Scsv.git
+version: '0.15'
