Import of KEICHNER/Win32-Scsv-0.18.tar.gz from CPAN.
gitpan-cpan-distribution: Win32-Scsv
gitpan-cpan-version:      0.18
gitpan-cpan-path:         KEICHNER/Win32-Scsv-0.18.tar.gz
gitpan-cpan-author:       KEICHNER
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,29 @@
 ---
-abstract: 'Convert from and to *.xls, *.csv using Win32::OLE'
+abstract: 'Convert from and to *.xls, *.csv using Win32::OLE '
 author:
   - 'Klaus Eichner <klaus03@gmail.com>'
 build_requires:
-  ExtUtils::MakeMaker: '0'
+  Test::More: '0'
 configure_requires:
   ExtUtils::MakeMaker: '0'
-dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.142060'
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 5.025, CPAN::Meta::Converter version 2.142060'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: '1.4'
 name: Win32-Scsv
-no_index:
-  directory:
-    - t
-    - inc
 requires:
+  Carp: '0'
+  Exporter: '0'
+  File::Copy: '0'
+  File::Spec: '0'
   Win32::OLE: '0'
+  Win32::OLE::Const: '0'
   Win32::OLE::Variant: '0'
+  strict: '0'
+  warnings: '0'
 resources:
+  homepage: https://github.com/klaus03/Win32-Scsv
   repository: https://github.com/klaus03/Win32-Scsv.git
-version: '0.17'
+version: '0.18'
